@@ -1,3 +1,8 @@
+2004-05-01  Mark Kettenis  <kettenis@gnu.org>
+
+	* dwarf2-frame.c (read_encoded_value): Handle DW_EH_PE_funcrel
+	encondings.  Fixes PR gdb/1628.
+
 2004-04-28  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 	    Andrew Cagney  <cagney@redhat.com>
 
